--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,21 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+   <distributionManagement>
+  
+  <repository>
+  <id>maven2</id>
+  <name>maven-release</name>
+  <url>http://localhost:8081/repository/maven-release/</url>
+  </repository>
+  
+  
+  <snapshotRepository>
+  <id>maven-snapshots</id>
+  <name>maven-snapshots</name>
+  <url>http://localhost:8081/repository/maven-snapshots/</url>
+  </snapshotRepository>
+  </distributionManagement>
+  
 </project>
