--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,18 @@
   <groupId>MyMaven_GrpId</groupId>
   <artifactId>MyMaven_Artifact_New</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+
 
   <name>MyMaven_Artifact_New</name>
   <url>http://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<p.type>war</p.type>
   </properties>
-
+  
+<packaging>${p.type}</packaging>
+ 
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
