--- a/MyMaven_Artifact_New/pom.xml
+++ b/MyMaven_Artifact_New/pom.xml
@@ -5,15 +5,18 @@
   <groupId>MyMaven_GrpId</groupId>
   <artifactId>MyMaven_Artifact_New</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+
 
   <name>MyMaven_Artifact_New</name>
   <url>http://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<p.type>war</p.type>
   </properties>
-
+  
+<packaging>${p.type}</packaging>
+ 
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -22,4 +25,21 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+   <distributionManagement>
+  
+  <repository>
+  <id>maven2</id>
+  <name>maven-release</name>
+  <url>http://localhost:8081/repository/maven-release/</url>
+  </repository>
+  
+  
+  <snapshotRepository>
+  <id>maven-snapshots</id>
+  <name>maven-snapshots</name>
+  <url>http://localhost:8081/repository/maven-snapshots/</url>
+  </snapshotRepository>
+  </distributionManagement>
+  
 </project>
